--- a/data dashboards/hospital data/assets/style.css
+++ b/data dashboards/hospital data/assets/style.css
@@ -5,6 +5,7 @@
     background-color: #222222;
     height: 288px;
     padding: 16px 0 0 0;
+    margin-bottom: 2rem;
 }
 .header-title {
     color: #FFFFFF;
