--- a/data dashboards/hospital data/assets/style.css
+++ b/data dashboards/hospital data/assets/style.css
@@ -27,4 +27,8 @@
     font-size: 1rem;
     font-family: 'Source Sans Pro', sans-serif;
 }
+.card {
+    margin-bottom: 24px;
+    box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.18);
+}
 
