--- a/data dashboards/hospital data/assets/style.css
+++ b/data dashboards/hospital data/assets/style.css
@@ -60,5 +60,14 @@
     margin-top: 10px;
     margin-bottom: 20px;
 }
-
+.footer{
+    background-color: #222222;
+    height: 288px;
+    padding: 16px 0 0 0;
+}
+.footer-text{
+    color: #55595C;
+    text-align: left;
+    padding: 0 30px 50px 0;  
+}
 
