--- a/data dashboards/hospital data/assets/style.css
+++ b/data dashboards/hospital data/assets/style.css
@@ -66,8 +66,20 @@
     padding: 16px 0 0 0;
 }
 .footer-text{
-    color: #55595C;
+    font-size: 2rem;
+    color: #f9fcff;
     text-align: left;
-    padding: 0 30px 50px 0;  
+    margin-left: 3rem;
+    margin-top: 6rem;
+    font-family: 'Source Sans Pro', sans-serif;
+
+}
+.footer-span{
+    color: f9fcff;
+    text-align: left;
+    margin-left: 3rem;
+    margin-top: 6rem;
+    font-size: 1rem;
+
 }
 
