--- a/data dashboards/hospital data/assets/style.css
+++ b/data dashboards/hospital data/assets/style.css
@@ -75,10 +75,10 @@
 
 }
 .footer-span{
-    color: f9fcff;
+    color: #f9fcff;
     text-align: left;
     margin-left: 3rem;
-    margin-top: 6rem;
+    margin-top: 1rem;
     font-size: 1rem;
 
 }
