--- a/data dashboards/financial/assets/style.css
+++ b/data dashboards/financial/assets/style.css
@@ -5,4 +5,30 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+.sidebar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    width: 16rem;
+    padding: 2rem 1rem;
+    background-color: "#f8f9fa";
+}
+/* .sidebar > .sidebar-card{
+    height: 8rem;
+} */
+.content-style{
+    margin-left: 18rem;
+    margin-right: 2rem;
+    padding: 2rem 1rem;
+}
+.card{
+    display: flex;
+    flex-basis: 100%;
+    margin-bottom: 1rem;
+    height: 50vh;
+    box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.18);
+}
+.title{
+    font-size: 2.5rem;
+}
