--- a/data dashboards/financial/assets/style.css
+++ b/data dashboards/financial/assets/style.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Dela+Gothic+One&family=Yanone+Kaffeesatz&display=swap');
 
 *{
     margin: 0;
@@ -30,5 +30,17 @@
     box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.18);
 }
 .title{
-    font-size: 2.5rem;
+    font-size: 2rem;
+    font-family: 'Comfortaa', cursive;
+}
+.top-title-text{
+    font-size: 2rem;
+    font-family: 'Comfortaa', cursive;
+}
+.dropdown{
+    color: #22252B;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
 }
